--- a/src/main/java/frmMain.form
+++ b/src/main/java/frmMain.form
@@ -2199,7 +2199,7 @@
           <grid id="fe1ed" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <tabbedpane title="Spring Acruator"/>
+              <tabbedpane title="Dynamic Log Level"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -2566,7 +2566,7 @@
                       <editable value="false"/>
                       <font size="12"/>
                       <horizontalAlignment value="2"/>
-                      <text value="1.1.0.0"/>
+                      <text value="1.1.0.1"/>
                     </properties>
                   </component>
                   <component id="f55ba" class="javax.swing.JLabel">
